--- a/contactme.html
+++ b/contactme.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Schedules/Appointments</title>
-  </head>
-  <body>
-    <p>Please input your information accordingly.</p>
-    <form class="" action="index.html" method="post">
-      <label>Your name:</label>
-      <input type="text" name="" value"" />
-      <label>Your Email:</label>
-      <input type="email" name="" value"" />
-      <label>Your message:</label>
-      </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Schedules/Appointments</title>
+</head>
+
+<body>
+  <p>Please input your information accordingly.</p>
+  <table cellspacing="10">
+    <form action="mailto:keonii12@gmail.com" method="post" enctype="text/plain">
+      <tr>
+        <td><label>Name:</label></td>
+        <td><input type="text" name="yourName" value"" /></td>
+      </tr>
+      <tr>
+        <td><label>Email:</label></td>
+        <td><input type="email" name="yourEmail" value"" /></td>
+      </tr>
+      <tr>
+        <td><label>Cell Phone #:</label></td>
+        <td><input type="number" name="yourNumber" value"" /></td>
+      </tr>
+  </table>
+  <input type="submit" name="" />
+  </form>
+
+</body>
+
 </html>
